# fake-pdf-redaction

./: .gitignore  MANUAL_TESTING.md  README.md  pyproject.toml  render.yaml
backend/: README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py  schemas.py
backend/app/routes/: scan.py  vectors.py
backend/app/services/: pdf_report.py  scanner.py
backend/tests/: conftest.py  test_cors.py  test_health.py  test_pdf_report.py  test_scan.py  test_scan_pdf.py  test_vectors.py
docs/specs/: 2026-06-21-pdf-redaction-auditor.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: AuditButton.tsx  BackendStatus.tsx  Badge.tsx  Confetti.tsx  CornerAccents.tsx  Dropzone.tsx  FeatureBox.tsx  FindingCard.tsx  GridOverlay.tsx  Marquee.tsx  ReportSummary.tsx  ScanningLoader.tsx  SeverityBadge.tsx  Toast.tsx  icons.tsx
frontend/src/lib/: api.ts  types.ts
frontend/src/pages/: BootLoader.tsx  Home.tsx  Report.tsx
src/pdfaudit/: __init__.py  cli.py  document.py  engine.py  model.py  reporters.py
src/pdfaudit/detectors/: __init__.py  base.py  covered_text.py  embedded_files.py  hidden_text.py  metadata.py  redact_annotations.py  revision_history.py
tests/: conftest.py  test_cli.py  test_detectors.py  test_engine.py  test_fixes.py  test_model_reporters.py  util.py
tests/fixtures/: gen_fixtures.py
