[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfaudit"
version = "0.1.0"
description = "Read-only auditor that detects recoverable content behind PDF redactions."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pikepdf>=8",
    "pdfminer.six>=20221105",
]

[project.optional-dependencies]
dev = ["pytest>=7", "reportlab>=4"]

[project.scripts]
pdfaudit = "pdfaudit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
