[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfaudit"
version = "0.1.0"
description = "Read-only auditor that detects recoverable content behind PDF redactions."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Upper bounds pin the parsing behaviour of a security tool against surprise
    # breaking releases; bump deliberately after re-running the test corpus.
    "pikepdf>=8,<12",
    "pdfminer.six>=20221105,<20270101",
    "defusedxml>=0.7",
]

[project.optional-dependencies]
dev = ["pytest>=7", "reportlab>=4"]

[project.scripts]
pdfaudit = "pdfaudit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
